<resources>
    <string name="app_name">MyHomeLibrary</string>
    <array name="countries">
        <item name="america">America</item>
        <item name="france">France</item>
        <item name="spain">Spain</item>
        <item name="columbia">Columbia</item>
        <item name="russia">Russia</item>
    </array>

    <string name="enter_name">Enter name</string>
    <string name="enter_title_name">Enter title name</string>
    <string name="enter_author_name">Enter author\'s name</string>
    <string name="add_titles">Add Titles</string>
    <string name="register_new_account">Register new account</string>
    <string name="tap_to_view">Tap on an Author to add and view titles</string>
    <string name="one">1</string>
    <string name="add">Add</string>
    <string name="authors">Authors</string>
    <string name="account_login">Account Login</string>
    <string name="delete">Delete</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="titles">Titles</string>
    <string name="update">Update</string>

    <string name="test_author">Ivo Andric</string>
    <string name="test_country">Kingdom of Yugoslavia</string>
</resources>
